# opm-costa

./: CMakeLists.txt  CoSTAModule.hpp  config.h  flow_blackoil_CoSTA.cpp  flow_gaswater_CoSTA.cpp  flow_onephase_CoSTA.cpp  moduleVersion.cpp  opm_CoSTA.cpp  test.py
deck/: GRID.INC  PERM.INC  PORO.INC  SATNUM.INC  TABLES.INC  TRACER.DATA  WELL_RATES.INC  test.py
